--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   blinking_text:
   google_nav_bar: ^5.0.6
   sizer: ^2.0.15
+  flutter_svg:
 
 
 
@@ -121,6 +122,11 @@ flutter:
     - assets/images/medicine.png
     - assets/images/logo 1.png
     - assets/images/logo.png
+    - assets/icons/bottle.svg
+    - assets/icons/pill.svg
+    - assets/icons/syringe.svg
+    - assets/icons/tablet.svg
+
 
 
 
