--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,11 @@ dependencies:
   image_picker:
   photo_manager:
   http: ^0.13.5
-  google_ml_kit: 
+  google_ml_kit:
   google_fonts:
   shared_preferences:
   smooth_page_indicator:
-  hive: 
+  hive:
   hive_flutter:
   internet_connection_checker:
   connectivity_plus: ^2.3.9
@@ -57,18 +57,20 @@ dependencies:
   google_nav_bar: ^5.0.6
   sizer: ^2.0.15
   flutter_svg:
+  rxdart:
+  provider:
 
 
 
 
- 
-  
+
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: 
+  hive_generator:
   build_runner:
   flutter_launcher_icons: ^0.9.2
   flutter_app_name: ^0.1.0
@@ -76,7 +78,7 @@ dev_dependencies:
 flutter_app_name:
     name: "Samaritan"
 
- 
+
 flutter_icons:
   android: true
   ios: true
@@ -145,7 +147,7 @@ flutter:
   #  - family: BebasNeue
   #    fonts:
   #      - asset: assets/fonts/BebasNeue-Regular.ttf
-       
+
   #  - family: Raleway
   #    fonts:
   #      - asset: assets/fonts/Raleway-Regular.ttf
