--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use with the alCupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.2.1
   page_transition: "^2.0.9"
@@ -61,6 +63,10 @@ dependencies:
   provider:
   flare_flutter:
   flutter_local_notifications:
+  avatar_glow:
+  speech_to_text: ^6.1.1
+  flutter_tts: ^3.6.2
+  flutter_carousel_slider: ^1.1.0
 
 
 
@@ -99,7 +105,7 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
