--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   speech_to_text: ^6.1.1
   flutter_tts: ^3.6.2
   flutter_carousel_slider: ^1.1.0
+  carousel_slider: ^4.1.1
 
 
 
@@ -132,6 +133,8 @@ flutter:
     - assets/images/medicine.png
     - assets/images/logo 1.png
     - assets/images/logo.png
+    - assets/images/download.jpg
+    - assets/images/news.jpg
     - assets/icons/bottle.svg
     - assets/icons/pill.svg
     - assets/icons/syringe.svg
