--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the alCupertinoIcons class for iOS style icons.
@@ -53,8 +53,8 @@ dependencies:
   hive:
   hive_flutter:
   internet_connection_checker:
-  connectivity_plus: ^2.3.9
-  overlay_support: ^1.2.1
+  connectivity_plus: ^4.0.1
+  overlay_support: ^2.1.0
   blinking_text:
   google_nav_bar: ^5.0.6
   sizer: ^2.0.15
@@ -62,7 +62,7 @@ dependencies:
   rxdart:
   provider:
   flare_flutter:
-  flutter_local_notifications:
+  flutter_local_notifications: ^9.1.5
   avatar_glow:
   speech_to_text: ^6.1.1
   flutter_tts: ^3.6.2
@@ -70,9 +70,9 @@ dependencies:
   carousel_slider: ^4.1.1
   switcher_button: ^0.0.4
   flutter_map: ^4.0.0
-  latlong: ^0.6.1
-
-
+#  latlong: ^0.6.1
+  graphql: ^5.1.1
+  graphql_flutter: ^5.1.0
 
 
 
@@ -85,7 +85,7 @@ dev_dependencies:
     sdk: flutter
   hive_generator:
   build_runner:
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.11.0
   flutter_app_name: ^0.1.0
 
 flutter_app_name:
@@ -149,6 +149,9 @@ flutter:
     - assets/images/garlic.jpg
     - assets/images/ginger_plant.jpg
     - assets/images/ocimum_lamiifolium.jpg
+    - assets/images/african_redwood.jpg
+    - assets/images/black_cumin.jpg
+    - assets/images/ruta_graveolens.jpg
 
 
 
